# minishell

./: CMakeLists.txt  Makefile  README.md  a  a.out  debug  hello  minishell  minishell_diagram.drawio  minishell_flowchart.drawio  minishell_flowchart_explain.drawio  result  test.c
inc/: .minishell.h.swp  minishell.h  minishell.h.gch
lib/: Makefile  ft_itoa.c  ft_lstclear.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_strrchr.c
libft/: .ft_itoa.c.swp  .ft_strdup.c.swp  Makefile  a  a.out  ft_calloc.c  ft_free.c  ft_free_mat.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhite.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_matadd_front.c  ft_matjoin.c  ft_matrow.c  ft_memccpy.c  ft_memmove.c  ft_putendl_fd.c  ft_split.c  ft_strccmp.c  ft_strcjoin.c  ft_strdup.c  ft_strlcpy.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  ft_write.c  libft.h
libft_cp/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_lstadd_back.c  ft_lstmap.c  ft_matdup.c  ft_memchr.c  ft_putchar_fd.c  ft_split.c  ft_strchr.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_tolower.c  libft.h
prac/: a.out  aa  bb  dup.c  fcntl.c  fork.c  main.c  malloc.c  minishell  pipe.c  redirect.c  strchr.c
srcs/: '  .cmd.c.swp  .echo.c.swp  .env.c.swp  .equal.c.swp  .exit.c.swp  .main.c.swp  .parse.c.swp  .parse_env.c.swp  .parse_main.c  .parse_quote.c.swp  1  :wq  \  a  a.out  b  chdir.c  cmd.c  echo.c  env.c  equal.c  exit.c  export.c  export_list  export_list2  fork.c  free.c  get_next_line.c  get_next_line_utils.c  hello  init.c  main.c  parse.c  parse_env.c  parse_env2.c  parse_proc.c  parse_quote.c  parse_utils.c  pipe.c  (+13 more)
